# cmp_polymorphism

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
benches/: bench-enum-obj.rs  bench-trait-obj.rs
src/: bin-enum-obj.rs  bin-trait-obj.rs  enum_obj.rs  lib.rs  trait_obj.rs
xtask/src/: main.rs  shape_benchmark_results.rs
