[package]
name = "cmp_polymorphism"
version = "0.1.4"
authors = ["aki <aki.akaguma@hotmail.com>"]
edition = "2018"
description = "research: comparing polymorphism of rust"
keywords = ["polymorphism"]
categories = ["rust-patterns"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]

[dependencies]
anyhow = "1.0"

[dev-dependencies]
memx-cdy = "0.1"
criterion = "0.3"
criterion-cycles-per-byte = "0.1"

[workspace]
members = [
    "xtask",
]

[[bench]]
name = "bench-trait-obj"
path = "benches/bench-trait-obj.rs"
harness = false

[[bench]]
name = "bench-enum-obj"
path = "benches/bench-enum-obj.rs"
harness = false

[[bin]]
name = "bin-trait-obj"
path = "src/bin-trait-obj.rs"

[[bin]]
name = "bin-enum-obj"
path = "src/bin-enum-obj.rs"
